# historical-news-sentiment

./: README.md  calculate_sentiments.py  config.json  config_ray.py  mypy.ini  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
config/: config.yaml  config_ray.py
dataQuest/: utils.py
dataQuest/article_final_selection/: process_articles.py
dataQuest/filter/: document_filter.py
dataQuest/models/: tfidf.py
dataQuest/output_generator/: text_formater.py
dataQuest/preprocessor/: text_cleaner.py
interest/: __init__.py  delpher_kranten.py  document.py  document_filter.py  fine_tune.py  hyperparameter_optimizer.py  input_file.py  preprocessor.py  sentiment.py  traditional_classifiers.py  utils.py
interest/article_final_selection/: article_selector.py  process_article.py  process_articles.py
interest/dataprocessor/: dataloader.py  preprocessor.py
interest/filter/: __init__.py  delpher_kranten.py  document_filter.py  input_file.py
interest/llm/: dataloader.py  preprocessor.py  transformer_trainer.py
interest/models/: tfidf.py
interest/output_generator/: text_formater.py
interest/preprocessor/: __init__.py  parser.py  text_cleaner.py
interest/sentiment_analyser/: doc2vec.py  traditional_classifiers.py  transformer_trainer.py
interest/temporal_categorization/: __init__.py  timestamped_data.py
interest/utils/: logging_utils.py
models/: gradient_boosting_binary_model.joblib  gradient_boosting_multi_model.joblib  logistic_regression_binary_model.joblib  logistic_regression_multi_model.joblib  naive_bayes_binary_model.joblib  naive_bayes_multi_model.joblib  random_forest_binary_model.joblib  support_vector_machine_binary_model.joblib  support_vector_machine_multi_model.joblib
notebooks/: BERT_classifier.ipynb  BERT_classifier_fossil_fuel.ipynb  BERT_classifier_nuclear.ipynb  BERT_classifier_renewable.ipynb  energy_types_sentiment_trends_binary_classification.ipynb  energy_types_sentiment_trends_multiclass.ipynb  fossil_fuel_trends_all_data.ipynb  hyperparameter_optimizer.ipynb  prepare_explainable_data.ipynb  prepare_sample_4_ai_labeling.ipynb  sentiment_analyser.ipynb  trend_track.ipynb
notebooks/explainability_outputs/binary/: gradient_boosting_lime_explanation.html  logistic_regression_lime_explanation.html  naive_bayes_lime_explanation.html  random_forest_lime_explanation.html  support_vector_machine_lime_explanation.html
notebooks/explainability_outputs/multi /: gradient_boosting_lime_explanation.html  logistic_regression_lime_explanation.html  naive_bayes_lime_explanation.html  random_forest_lime_explanation.html  support_vector_machine_lime_explanation.html
script/: fine_tune.py  mlm.py  prepare_data.py
scripts/: categorize_by_timestamp.py  convert_input_files.py  filter_articles.py  step1_filter_articles.py  step2_categorize_by_timestamp.py  step3_select_final_articles.py  step4_generate_output.py
