[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "interest"
description = "A python package to extract the sentiment of the historical Dutch news articles"
authors = [
    {name = "Shiva", email = "s.nadi@uu.nl"},
    {name = "Parisa Zahedi", email = "p.zahedi@uu.nl"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]
dependencies = [
    "numpy == 1.26.4",
    "pandas == 2.2.1",
    "gensim == 4.3.3",
    "nltk == 3.8.1",
    "tqdm == 4.66.2",
    "matplotlib == 3.9.1.post1",
    "scikit-learn == 1.4.1.post1"
]

[project.optional-dependencies]
lint = ["flake8"]
test = ["pytest", "mypy"]

[tool.setuptools]
packages = ["interest"]

[tool.flake8]
max-line-length = 99
