[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "interest"
description = "A python package to extract the sentiment of the historical Dutch news articles"
authors = [
    {name = "Shiva", email = "s.nadi@uu.nl"},
    {name = "Parisa Zahedi", email = "p.zahedi@uu.nl"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]
dependencies = [
    "flake8-pyproject",
    "numpy",
    "pandas",
    "gensim",
    "nltk",
    "tqdm",
    "matplotlib",
    "scikit-learn",
    "torch",
    "transformers",
    "ray"
]

[project.optional-dependencies]
lint = ["flake8"]
test = ["pytest", "mypy"]

[tool.setuptools]
packages = ["interest"]

[tool.flake8]
max-line-length = 99
ignore = ["F841"]

[tool.pylint]
disable = ["R0902","R0914","R0913","E1101","W0718","W0719","W0612","E0633"]
